# Core

./: .gitignore  ECOSYSTEM.md  LICENSE  README.md
Cognitive Load Monitor/: .gitignore  LICENSE  MANIFEST.in  NOTICE  PUBLISHING.md  README.md  pyproject.toml
Cognitive Load Monitor/src/cognitive_load_monitor/: __init__.py  monitor.py
Cognitive Loop/: README.md  pyproject.toml
Cognitive Loop/clm/: __init__.py  __main__.py  clm.py  config.py
Cognitive Loop/clm/core/: __init__.py  cognitive_loop.py  signal.py  state.py
Cognitive Loop/clm/deployment/: __init__.py  local.py  server.py
Cognitive Loop/clm/development/: __init__.py  maturity.py  phases.py
Cognitive Loop/clm/grounding/: __init__.py  base.py  hybrid_grounder.py  internal_grounder.py  llm_grounder.py
Cognitive Loop/clm/neurons/: __init__.py  base.py  hebbian.py  network.py
Cognitive Loop/clm/output/: __init__.py  base.py  hybrid_renderer.py  internal_renderer.py  llm_renderer.py
Cognitive Loop/clm/perception/: __init__.py  base.py  conversation.py  document.py  feed.py  trust.py  web.py
Cognitive Loop/clm/reasoning/: __init__.py  concept_graph.py  consolidation.py  contradiction.py  metacognition.py  simulation.py
Council/: RUN_TESTS.md  agent_factory.py  coalition_system.py  council_framework.py  debate_forking.py  emotion_system.py  example_advanced.py  example_basic.py  example_fluid.py  example_sentient.py  fluid_debate_system.py  fluid_moderator.py  knowledge_graph.py  learning_engine.py  llm_council_systems.py  llm_interface.py  llm_powered_agent.py  meta_debate.py  multimodal_support.py  openai_integration.py  real_web_search.py  reputation_system.py  sentient_agent.py  sentient_debate_system.py  sentient_moderator.py  web_fetcher.py
Council/docs/: FLUID_RESOURCING.md  INTEGRATION_GUIDE.md  README.md  Test 2.md  WHITEPAPER.md
Council/testing-OLD/: __init__.py  conversation_recorder.py  live_test_suite.py  metrics_analyzer.py  run_proper_ultimate_test.py  run_test1.py  run_test3.py  run_test4.py  run_test5.py  run_test6.py  run_ultimate_test.py  test_fluid_system.py  test_runner.py  whitepaper_logger.py  whitepaper_test_suite.py
Council/testing-OLD/testing/: test1_full_hive.py  test8_large_debate.py
MEO/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  QUICKSTART.md  README.md  STRUCTURE.md  TECHNICAL_FAQ.md  pyproject.toml  setup.py  test_meo.py
MEO/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
MEO/.github/workflows/: tests.yml
MEO/examples/: autogen_example.py  basic_usage.py  custom_components.py  langchain_example.py
MEO/meo/: __init__.py
MEO/meo/evaluators/: __init__.py  metrics.py  reward.py
MEO/meo/integrations/: __init__.py  autogen_wrapper.py  langchain_wrapper.py
MEO/meo/meta/: __init__.py  policy_adapter.py
MEO/meo/orchestrator/: __init__.py  hooks.py  wrappers.py
MEO/meo/utils/: __init__.py  encoders.py  logging.py
NEURON/: .gitignore  __init__.py  collective_reasoning.py  conscious_network.py  consciousness_system.py  emergent_dynamics.py  evolutionary_system.py  example_basic.py  example_conscious.py  example_living.py  learning_system.py  living_network.py  neuron_core.py  neuron_network.py  persistence_system.py  pyproject.toml  self_modification_system.py  vector_base.py
NEURON/tests/: test_logger.py
NEURON/tests/test_01_basic_reasoning/: README.md  run_test.py
Orchestra/: .gitignore  LICENSE  convert_whitepaper_to_docx.py  requirements.txt  setup.py
Orchestra/benchmarks/: benchmark_orchestra_vs_langchain.py
Orchestra/docs/: ARCHITECTURE.md  BENCHMARK_WHITEPAPER.md  LANGCHAIN_COMPARISON.md  MEMORY_ARCHITECTURE.md  QUICKSTART.md  README.md
Orchestra/examples/: example_autonomous_agent.py  example_full_integration.py  example_llm_swarm.py  example_memory_embedded_agents.py  example_multi_agent_collaboration.py  example_multimodal_vision.py  example_orchestra_v4_intelligence.py  example_parallel_swarm.py  example_rag_system.py  example_simple_task.py  example_tool_calling.py
Orchestra/orchestra/: __init__.py  chain_of_thought.py  integration.py  orchestrator.py  parallel_swarm.py  tree_orchestrator.py
Orchestra/orchestra/advanced_cot/: __init__.py  backtracking_cot.py  self_verifying_cot.py
Orchestra/orchestra/agents/: __init__.py  autonomous.py  collaboration.py
Orchestra/orchestra/capability/: __init__.py  discovery.py  matcher.py
Orchestra/orchestra/llm/: __init__.py  base.py  manager.py  providers.py
Orchestra/orchestra/multimodal/: __init__.py  audio.py  multimodal_agent.py  vision.py
Orchestra/orchestra/prompts/: __init__.py  parser.py  template.py
Orchestra/orchestra/rag/: __init__.py  embeddings.py  retriever.py  vector_store.py
Orchestra/orchestra/reinforcement/: __init__.py  q_learning.py  routing_optimizer.py
Orchestra/orchestra/semantic/: __init__.py  lsh.py  minhash.py  task_similarity.py  tfidf.py
Orchestra/orchestra/tools/: __init__.py  base.py  executor.py  registry.py
Orchestra/orchestra/wisdom/: __init__.py  meta_learner.py  (+2 more)
Orchestra/tests/: BATCH1_RESULTS.md  BENCHMARK_BATCHES.md  BENCHMARK_DOCUMENTATION.md  BENCHMARK_PLAN.md  BENCHMARK_RESULTS_FINAL.md  COMPREHENSIVE_TEST_PLAN.md  RESULTS_TEMPLATE.md  TEST_SUMMARY.md  batch1_parallel_execution.py  batch1_results.json  batch2_memory_cache.py  batch2_results.json  debug_swarm_result.py  run_tests.py  test_core_orchestration.py  test_intelligence_v4.py  test_memory_agents.py  test_orchestra.py  test_quick.py  test_real_benchmarks.py  test_swarm_fix.py
Smart Resilience/: CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  __init__.py  pyproject.toml  smart_resilience.py  test_smart_resilience.py
Smart Resilience/examples/: basic_usage.py  cognitive_usage.py
(+64 files in other folders)
